# sensecraft-data-mcp

./: README.md
coding-assistant/: package-lock.json  package.json  tsconfig.json
docs/superpowers/plans/: 2026-07-10-farm-report-mcp-phase1.md
docs/superpowers/specs/: 2026-07-10-farm-report-mcp-design.md
sensecraft_data_mcp/: .env.develop  .npmignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup.py  tsconfig.json
sensecraft_data_mcp/mcp_tools/: error_info.py  paas_client.py
sensecraft_data_mcp/src/: .env.global  index.ts  logger.ts  main.py
sensecraft_data_mcp/src/config/: .env  .env.china  .env.develop  .env.global  config.ts
sensecraft_data_mcp/src/mcp_tools/: code_reader.py  code_reader.ts  device_registry.ts  device_resolver.test.ts  device_resolver.ts  mcp_register.ts  measurement_catalog.test.ts  measurement_catalog.ts  paas_client.ts  response.ts  time_util.ts
sensecraft_data_mcp/src/static/arduino/: config.h  led_blink.h  main.cpp  sensecraft_http_device_status_send.h  sensecraft_http_measurement_send.cpp  sensecraft_http_measurement_send.h  tem_hum_collect.h
sensecraft_data_mcp/src/transport/: ws_endpoint_transport.ts
sensecraft_data_mcp/static/arduino/: tem_hum_collect.cpp
