[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensecraft_data_mcp"
version = "1.0.0"
description = "SenseCraft Data MCP package"
dependencies = [
    "annotated-types==0.7.0",
    "anyio",
    "certifi==2025.1.31",
    "click==8.1.8",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "markdown-it-py==3.0.0",
    "mcp==1.6.0",
    "mdurl==0.1.2",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.1",
    "Pygments==2.19.1",
    "python-dotenv==1.1.0",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sse-starlette==2.2.1",
    "starlette==0.46.2",
    "typer==0.15.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "uvicorn==0.34.2"
]

[project.scripts]
sensecraft_data_mcp = "server:main"  # 因为 pyproject.toml 和 server.py 同级

# 显式声明包和子包（无需调整目录结构）
[tool.setuptools]
packages = ["mcp_tools"]  # 仅声明子包（当前目录的 __init__.py 已隐含包含）
package-dir = {"" = "."}  # 从当前目录（sensecraft_data_mcp）解析包

# 包含静态文件
[tool.setuptools.package-data]
"*" = ["static/*"]